# csv_cruncher

./: Cargo.toml  README.md  Untitled.ipynb  data.csv  e0133_Cargo.toml  e0133_lib.rs  e0133_main.rs  results.json
.cargo/: config.toml
.github/workflows/: rust.yml
benches/: profile.rs
src/: lib.rs  main.rs
