[package]
name = "csv_cruncher"
version = "0.1.0"
edition = "2021"
description = "A blazing-fast CSV processor with Python bindings, because pandas deserves a timeout"
license = "MIT"

[lib]
name = "csv_cruncher"
crate-type = ["cdylib", "rlib"]

[dependencies]
pyo3 = { version = "0.22", features = ["extension-module"] }
