[package]
name = "csv_cruncher"
version = "0.1.0"
edition = "2021"
description = "A blazing-fast CSV processor with Python bindings, because pandas deserves a timeout"
license = "MIT"

[lib]
name = "csv_cruncher"
crate-type = ["cdylib"]

[dependencies]
pyo3 = { version = "0.22", features = ["auto-initialize"], optional = true }
polars = { version = "0.43", features = ["csv", "describe", "lazy"] }
clap = { version = "4.5", features = ["derive"] }
anyhow = "1.0"
serde_json = "1.0"
json = "0.12"

[dev-dependencies]
criterion = "0.5"

[profile.bench]
debug = true

[features]
default = ["python-bindings"]
python-bindings = ["pyo3"]
